--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,11 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  height: 100vh;
+  max-width: 100vw;
+}
+
 body,
 button {
   font-family: "Poppins", sans-serif;
@@ -87,6 +92,7 @@ button {
   color: #bdbdbd;
 }
 .container .gallery {
+  padding-bottom: 10em;
   display: grid;
   gap: 3%;
   grid-template-rows: 1fr 1fr 1fr;
