--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -16,6 +16,11 @@ html {
 	box-sizing: inherit;
 }
 
+body {
+	height: 100vh;
+	max-width: 100vw;
+}
+
 body,
 button {
 	font-family: "Poppins", sans-serif;
@@ -126,6 +131,7 @@ button {
 			filter: drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.15));
 		}
 
+		padding-bottom: 10em;
 		display: grid;
 		gap: 3%;
 		grid-template-rows: 1fr 1fr 1fr;
